--- a/CoderGirl_MVCMovies/Views/Shared/_Layout.cshtml
+++ b/CoderGirl_MVCMovies/Views/Shared/_Layout.cshtml
@@ -29,7 +29,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MovieRating" asp-action="Create">Add Movie Rating</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MovieRating" asp-action="Index">Movie Rating</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Movie" asp-action="Index">Movie List</a>
