--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -12,10 +12,10 @@
     </tr>
     @foreach (var movie in ViewBag.MovieRatings)
     {
-        <tr id="?">
-            <td>@movie.MovieName</td>
-            <td>@movie.Rating</td>
-        </tr>
+    <tr id="movieIdToUse">
+        <td>@movie.MovieName</td>
+        <td>@movie.Rating</td>
+    </tr>
 
     }
 </table>
