--- a/CoderGirl_MVCMovies/Views/Movie/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Edit.cshtml
@@ -1,18 +1,16 @@
 ﻿@model CoderGirl_MVCMovies.Models.Movie
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Edit";
 }
 
-
-
-<h1>Create</h1>
+<h1>Edit</h1>
 
 <h4>Movie</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -30,7 +28,7 @@
                 <span asp-validation-for="Year" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <button type="submit" class="btn btn-primary">Add Movie</button>
+                <input type="submit" value="Update Movie" class="btn btn-primary" />
             </div>
         </form>
     </div>
