--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -7,8 +7,8 @@
 <a asp-controller="MovieRating" asp-action="Create">Add Movie Rating</a>
 <table>
     <tr>
-        <th>Movie Name</th>
-        <th>Movie Rating</th>
+        <th>Movie</th>
+        <th>Rating</th>
     </tr>
     @foreach (var movie in ViewBag.MovieRatings)
     {
