--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -4,6 +4,7 @@
 }
 
 <h1>Movie Ratings</h1>
+<a asp-controller="MovieRating" asp-action="Create" id="add-movierating">Rate A Movie</a>
 <table>
     <tr>
         <th>Movie</th><th>Rating</th>
