--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model List<CoderGirl_MVCMovies.Models.MovieRating>
 @{
     ViewData["Title"] = "Movie Ratings";
 }
@@ -7,12 +7,18 @@
 <a asp-controller="MovieRating" asp-action="Create" id="add-movierating">Rate A Movie</a>
 <table>
     <tr>
-        <th>Movie</th><th>Rating</th>
+        <th>Movie</th><th></th><th>Rating</th>
     </tr>
-    @foreach(var movieRating in ViewBag.MovieRatings)
-    {
-        <tr>
-            <td>@movieRating.Key</td><td>@movieRating.Value</td>
-        </tr>
+    @foreach(var movieRating in Model)
+    { 
+    <tr>
+        <td>@movieRating.MovieName</td>
+        <td></td>
+        <td align="center">@movieRating.Rating</td>
+        <td></td>
+        <td align="center"><a asp-controller="MovieRating" asp-action="Edit" asp-route-id="@movieRating.Id">Edit</a></td>
+        <td></td>
+        <td align="center"><a asp-controller="MovieRating" asp-action="Delete" asp-route-id="@movieRating.Id">Delete</a></td>
+    </tr>
     }
 </table>
