--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Rate a Movie</h1>
 <form method='post'>
-    <select name="Movie">
+    <select name="MovieName">
         @foreach (var name in ViewBag.MovieNames)
         {
             <option>@name</option>
