--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -6,10 +6,10 @@
 
 <h1>Rate a Movie</h1>
 <form method='post'>
-    <select asp-for="MovieName">
+    <select  asp-for="MovieName">
         @foreach (var name in ViewBag.MovieNames)
         {
-            <option>@name</option>
+            <option id="@name.Id" >@name</option>
         }
     </select>
     <select asp-for="Rating">
