--- a/CoderGirl_MVCMovies/Views/Director/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/Director/Create.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
+                <input asp-for="LastName" required class="form-control" />
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
                 <label asp-for="BirthDate" class="control-label"></label>
