--- a/CoderGirl_MVCMovies/Views/Director/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Director/Index.cshtml
@@ -16,10 +16,8 @@
     {
         <tr id="@director.Id">
             <td width="150px" align="left">@director.LastName  @director.FirstName</td>
-            <td width="200px" align="left">@director.BirthDate</td>
+            <td width="200px" align="left">@director.BirthDate.Date</td>
             <td width="150px" align="left">@director.Nationality</td>
-           
-            <td width="75px"><a asp-controller="Director" asp-action="Create(@director.Id)" asp-route-id="@director.Id">Rate</a></td>
             <td width="75px"><a asp-controller="Director" asp-action="Edit" asp-route-id="@director.Id">Edit</a></td>
             <td width="75px"><a asp-controller="Director" asp-action="Delete" asp-route-id="@director.Id">Delete</a></td>
         </tr>
