--- a/CoderGirl_MVCMovies/Views/Director/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/Director/Create.cshtml
@@ -24,7 +24,7 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
                 <label asp-for="BirthDate" class="control-label"></label>
-                <input asp-for="BirthDate" class="form-control" />
+                <input asp-for="BirthDate" type="date" class="form-control" />
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
                 <div class="form-group">
                 </div>
