--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -4,16 +4,16 @@
 }
 
 <h1>Movie Ratings</h1>
-<a id="add-movierating" asp-action="Create">Rate a Movie</a>
+<a id="add-movierating" asp-controller="MovieRating" asp-action="Create">Rate a Movie</a>
 <table>
     <tr>
-        <th>Movie</th><th>Rating</th>
+        <th width="75px">Movie</th><th width="75px">Rating</th>
     </tr>
     @foreach(var movieRating in Model)
     {
     <tr>
-        <td>@movieRating.MovieName</td>
-        <td>@movieRating.Rating</td>
+        <td width="75px">@movieRating.MovieName</td>
+        <td width="75px">@movieRating.Rating</td>
         <td><a asp-action="Edit" asp-route-id="@movieRating.Id">Edit</a></td>
         <td><a asp-action="Delete" asp-route-id="@movieRating.Id">Delete</a></td>
     </tr>
