--- a/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
@@ -30,7 +30,7 @@
             <td> none </td>
          }
         <td width="150px" align="center">@movie.Ratings.Count</td>
-        <td width="75px"><a asp-controller="MovieRating" asp-action="Create" asp-route-id="@movie.Id">Rate</a></td>
+        <td width="75px"><a asp-controller="MovieRating" asp-action="Create/@movie.Id" asp-route-id="@movie.Id">Rate</a></td>
         <td width="75px"><a asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">Edit</a></td>
         <td width="75px"><a asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">Delete</a></td>
     </tr>
