--- a/CoderGirl_MVCMovies/Views/Director/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/Director/Create.cshtml
@@ -34,7 +34,8 @@
                 <span asp-validation-for="Nationality" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <button type="submit" class="btn btn-primary">Create</button>
+                @*<input type="submit" value="Create" class="btn btn-primary" />*@
             </div>
         </form>
     </div>
