--- a/CoderGirl_MVCMovies/Views/Director/Edit.cshtml
+++ b/CoderGirl_MVCMovies/Views/Director/Edit.cshtml
@@ -24,7 +24,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="BirthDate" class="control-label"></label>
-                <input asp-for="BirthDate" class="form-control" value="@Model.BirthDate"/>
+                <input asp-for="BirthDate" type="date" class="form-control" value="@Model.BirthDate"/>
                 <span asp-validation-for="BirthDate" class="text-danger"></span>
             </div>
             <div class="form-group">
