Week18 MVC Movies_Extension Models: All Tests Passed

--- a/CoderGirl_MVCMovies/Views/Director/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Director/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a id="add-new-director" asp-action="Create">Add a Director</a>
+    <a id="add-new-director" asp-controller="Director" asp-action="Create">Add a Director</a>
 </p>
 <table>
     <tr>
