--- a/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Create.cshtml
@@ -18,11 +18,11 @@
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DirectorId" class="control-label"></label>
+                <label asp-for="DirectorId" class="control-label">Director</label>
                 <select asp-for="DirectorId">
                     @foreach (var director in Model.Directors)
                     {
-                        <option value="@director.Id">@director.FullName></option>
+                        <option value="@director.Id">@director.FullName</option>
 
 
                     }
