--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CoderGirl_MVCMovies.Models.MovieRating
+﻿@model CoderGirl_MVCMovies.ViewModels.MovieRatings.MovieRatingCreateViewModel
 
 @{
     ViewData["Title"] = "Rate Movie";
@@ -6,7 +6,7 @@
 
 <h1>Rate a Movie</h1>
 <form method='post'>
-    <input readonly asp-for="MovieName" value="@Model.MovieName"/>
+    <input id="@Model.MovieId"  readonly asp-for="MovieName" value="@Model.MovieName"/>
     <select asp-for="Rating">
         <option>1</option>
         <option>2</option>
