--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -1,21 +1,37 @@
-﻿@model List<CoderGirl_MVCMovies.Models.MovieRating>
+﻿@model IEnumerable<CoderGirl_MVCMovies.ViewModels.MovieRatings.MovieRatingIndexViewModel>
 @{
     ViewData["Title"] = "Movie Ratings";
 }
 
-<h1>Movie Ratings</h1>
+<h1>Movie Ratings Index View Model</h1>
 <a id="add-movierating" asp-action="Create">Rate a Movie</a>
-<table>
-    <tr>
-        <th>Movie</th><th>Rating</th>
-    </tr>
-    @foreach(var movieRating in Model)
-    {
-    <tr>
-        <td>@movieRating.MovieName</td>
-        <td>@movieRating.Rating</td>
-        <td><a asp-action="Edit" asp-route-id="@movieRating.Id">Edit</a></td>
-        <td><a asp-action="Delete" asp-route-id="@movieRating.Id">Delete</a></td>
-    </tr>
-    }
+<table class="table">
+    <thead>
+        <tr>
+            <th>@Html.DisplayNameFor(model => model.MovieName)</th>
+            <th>@Html.DisplayNameFor(model => model.Rating)</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var movieRating in Model)
+        {
+        <tr id="@movieRating.MovieId">
+            <td>
+                @Html.DisplayFor(modelItem => movieRating.MovieName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => movieRating.Rating)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = movieRating.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = movieRating.Id })
+            </td>
+
+
+            @*<td><a asp-action="Edit" asp-route-id="@movieRating.Id">Edit</a></td>
+              <td><a asp-action="Delete" asp-route-id="@movieRating.Id">Delete</a></td>
+            *@
+        </tr>
+        }
+    </tbody>
 </table>
