--- a/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/Movie/Index.cshtml
@@ -19,31 +19,33 @@
     <tbody>
         @foreach (var movie in Model)
         {
-            <tr id="@movie.Id">
-                <td>@Html.DisplayFor(modelItem => movie.Name)</td>
-                <td>@Html.DisplayFor(modelItem => movie.DirectorName)</td>
-                <td>@Html.DisplayFor(modelItem => movie.Year)</td>
-                @if (movie.Ratings.Count > 0)
-                {
-                    <td>@Html.DisplayFor(modelItem => movie.Ratings.Average())</td>
-                }
-                else
-                {
-                    <td>none</td>
-                }
-                <td>@Html.DisplayFor(modelItem => movie.Ratings.Count)</td>
-                <td>
-                    @Html.ActionLink("Edit", "Edit", new { id = movie.Id }) |
+        <tr id="@movie.Id">
+            <td>@Html.DisplayFor(modelItem => movie.Name)</td>
+            <td>@Html.DisplayFor(modelItem => movie.DirectorName)</td>
+            <td>@Html.DisplayFor(modelItem => movie.Year)</td>
+            @*<td>@Html.DisplayFor(modelItem => movie.AverageRating)</td>*@
+            @if (movie.Ratings.Count > 0)
+            {
+                <td>@movie.Ratings.Average()</td>
+            }
+            else
+            {
+                <td>none</td>
+            }
+            @*<td>@Html.DisplayFor(modelItem => movie.NumberOfRatings)</td>*@
+        <td>@movie.Ratings.Count</td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = movie.Id }) |
 
-                    @Html.ActionLink("Rate", "Create", "MovieRating", new { id = movie.Id }) |
+                @Html.ActionLink("Rate", "Create", "MovieRating", new { movieId = movie.Id }) |
 
-                    @Html.ActionLink("Delete", "Delete", new { id = movie.Id })
-                </td>
-                @*<td><a asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">Edit</a></td>
-                <td><a asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">Delete</a></td>
-                <td><a asp-controller="MovieRating" asp-action="Create" asp-route-movieId="@movie.Id">Rate</a></td>
-                *@
-            </tr>
+                @Html.ActionLink("Delete", "Delete", new { id = movie.Id })
+            </td>
+            @*<td><a asp-controller="Movie" asp-action="Edit" asp-route-id="@movie.Id">Edit</a></td>
+        <td><a asp-controller="Movie" asp-action="Delete" asp-route-id="@movie.Id">Delete</a></td>
+        <td><a asp-controller="MovieRating" asp-action="Create" asp-route-movieId="@movie.Id">Rate</a></td>
+            *@
+        </tr>
         }
         </tbody>
 </table>
