All errors rectified. Everything works as per the AC

--- a/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Create.cshtml
@@ -33,6 +33,7 @@
                 </select>
                 <span asp-validation-for="Rating" class="text-danger"></span>
             </div>
+            <a href="~/Views/MovieRating/Create.cshtml">~/Views/MovieRating/Create.cshtml</a>
 
             <div class="form-group">
                 <button type="submit" value="Create" class="btn btn-primary">Rate Movie</button>
