--- a/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
+++ b/CoderGirl_MVCMovies/Views/MovieRating/Index.cshtml
@@ -4,7 +4,8 @@
 }
 
 <h1>Movie Ratings Index View Model</h1>
-<a id="add-movierating" asp-action="Create">Rate a Movie</a>
+@*<a id="add-movierating" asp-action="Create">Rate a Movie</a> AS PER THE CURRENT DESIGN
+   THIS LINK IS UNNECESSARY *@
 <table class="table">
     <thead>
         <tr>
