--- a/CoderGirl_MVCMovies/Views/Shared/_Layout.cshtml
+++ b/CoderGirl_MVCMovies/Views/Shared/_Layout.cshtml
@@ -40,9 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MovieRating" asp-action="Index">Movie Rating List</a>
                         </li>
-                        <li class="nav-item">
+                        @*<li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="MovieRating" asp-action="Create">Add Movie Rating</a>
-                        </li>
+                        </li>*@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Director" asp-action="Index">Director List</a>
                         </li>
